--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,21 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+        <plugin>
+          <!-- Build an executable JAR -->
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.1.0</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <classpathPrefix>lib/</classpathPrefix>
+                <mainClass>com.cmdgames.rpg.App</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
       <plugins>
@@ -69,26 +84,6 @@
                   <target>1.8</target>
               </configuration>
           </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>cobertura-maven-plugin</artifactId>
-          <version>2.7</version>
-          <configuration>
-            <check></check>
-            <instrumentation>
-              <excludes>
-                <exclude>com/cmdgames/rpg/**/*.class</exclude>
-              </excludes>
-            </instrumentation>
-          </configuration>
-          <executions>
-            <execution>
-              <goals>
-                <goal>instrument</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
       </plugins>
   </build>
 </project>
